fix to icons inside floating buttons not being vertically aligned, probably caused by a vuetify update

--- a/src/utils/globalcss.css
+++ b/src/utils/globalcss.css
@@ -1,4 +1,9 @@
-.v-btn{
+.v-btn {
     text-transform: none;
     font-size: 16px;
+}
+
+/*fix to icon inside floating buttons not being vertically aligned, probably because of a vuetify update*/
+.v-btn--floating .v-icon {
+    height: auto;
 }
